# huffPP

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: multi-cmake-build.yml
src/: huffman_coding.hpp  huffman_test.cpp  huffman_test.hpp
